# fprime-amsat-reference

./: .gitignore
CDHDeployment/: CMakeLists.txt
CDHDeployment/AMSATDeframer/: AMSATDeframer.cpp  AMSATDeframer.fpp  AMSATDeframer.hpp  CMakeLists.txt
CDHDeployment/AMSATDeframer/docs/: sdd.md
CDHDeployment/Top/: CDHDeploymentPackets.fppi  instances.fpp  topology.fpp
Components/USBSoundCard/: CMakeLists.txt  USBSoundCard.cpp  USBSoundCard.fpp  USBSoundCard.hpp
GDS/: ax25_kiss_framer.py  pyproject.toml
